new templet add

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
         </div>
     </section>
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-light p-3 rounded-2" tabindex="0">
-        <div class="abc" id="scrollspyHeading1">
+        <div class="abc">
             About
-            <img src="assets\1 (8).png" class="photo">
+            <img src="assets\1 (8).png" class="photo" id="scrollspyHeading1">
         </div><hr>
-        <div class="skill" id="scrollspyHeading2">
+        <div class="skill">
             <h2 class="heading">Skills</h1>
             <div class="profil">
                 <img class="photo" src="assets\1 (5).jpg">
-                <h2>Data Science</h1>
+                <h2 id="scrollspyHeading2">Data Science</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At numquam doloribus sit beatae! Voluptates, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem totam fugit cupiditate animi nihil voluptatum dolor voluptatem beatae tenetur impedit explicabo saepe et ducimus ad tempora libero, consectetur neque.
                 </p>
             </div>
@@ -77,11 +77,11 @@
                     </p>
             </div>
             <hr>
-            <div class="last h-50" id="scrollspyHeading6">
+            <div class="last h-50">
                 <h4>
                     Contact
                 </h4>
-                6396849274 <br>
+                6396849274 <br id="scrollspyHeading6">
                 keshumishra987@gmail.com
         
             </div>
