--- a/index.html
+++ b/index.html
@@ -56,34 +56,44 @@
             </div>
         </div>
     </section>
+
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-light p-3 rounded-2" tabindex="0">
-        <div class="abc">
-            About
-            <img src="assets\1 (8).png" class="photo" id="scrollspyHeading1">
-        </div><hr>
+        <hr>
         <div class="skill">
             <h2 class="heading">Skills</h1>
-            <div class="profil">
-                <img class="photo" src="assets\1 (5).jpg">
-                <h2 id="scrollspyHeading2">Data Science</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At numquam doloribus sit beatae! Voluptates, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem totam fugit cupiditate animi nihil voluptatum dolor voluptatem beatae tenetur impedit explicabo saepe et ducimus ad tempora libero, consectetur neque.
-                </p>
-            </div>
-            <div class="profil">
-                <img class="photo" src="assets\1 (6).jpg">
-                <h2>Web Dev</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At numquam doloribus sit beatae! Voluptates, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci rem totam fugit cupiditate animi nihil voluptatum dolor voluptatem beatae tenetur impedit explicabo saepe et ducimus ad tempora libero, consectetur neque.
-                    </p>
-            </div>
+                <div class="row">
+                    <div class="card col-4 h-50" style="width: 18rem;">
+                        <img src="assets/Mathematics-bro.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card col-4 h-50" style="width: 18rem;">
+                        <img src="assets/Programming-pana.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h3>Web-Dev</h3>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card col-4 h-50" style="width: 18rem;">
+                        <img src="assets/Data extraction-pana.svg" class="card-img-top" alt="...">
+                        <div class="card-body ">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
             <hr>
-            <div class="last h-50">
-                <h4>
-                    Contact
-                </h4>
-                6396849274 <br id="scrollspyHeading6">
-                keshumishra987@gmail.com
-        
+            <div class="row">
+                <h2>Contact</h2>
+                <div class="col-4"><img src="assets/Book lover-pana.svg"></div>
+                <div class="col-2">
+                    <br><br>
+                    <ol>
+                        <li>6396849274</li>
+                        <li>keshumishra987@gmail.com</li>
+                        <li>Hire Me</li>
+                    </ol>
+                </div>
             </div>
         </div>
     </div>
