--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,42 @@
 <body>
     <h1>Sample Templet</h1>
     <div class="row" id="wa">
-        <div class="col h-100 border-dark col-7  bg-dark">Height</div>
+        <div class="col h-100 border-dark col-7  bg-dark">
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark" >
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <a class="navbar-brand me-auto" href="">Portfolio</a>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#scrollspyHeading1">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#scrollspyHeading2">Skills</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Projects
+                            </a>
+                            
+                            <ul class="dropdown-menu bg-dark">
+                            <li><a class="dropdown-item link-light" href="#scrollspyHeading3">Action</a></li>
+                            <li><a class="dropdown-item link-light" href="#scrollspyHeading4">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider bg-light">
+                            </li>
+                            <li><a class="dropdown-item link-light" href="#scrollspyHeading5">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#scrollspyHeading6">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </div>
         <div class="col h-100  col-3 bg-dark">Height</div>
         <div class="col h-25   border-dark col-10  bg-dark">
             hello
