--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <button  type="button" class="btn btn-outline-dark btn-lg"><img src="assets/icons8-github-512.png" class="img img1"> GitHub</button>
             </div>
             <div class="col-lg-6 h-50 container">
-                <img src="assets\1 (1).png" class="photo h-25" alt="photo">
+                <img src="assets/Ecosystem-bro.svg" class="photo h-25" alt="photo">
             </div>
         </div>
     </section>
