--- a/index2.html
+++ b/index2.html
@@ -8,12 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Sample Templet</h1>
     <div class="row" id="wa">
         <div class="col h-100 border-dark col-7  bg-dark">
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark" >
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <a class="navbar-brand me-auto" href="">Portfolio</a>
+                    <a class="navbar-brand me-auto" href="">ICON</a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#scrollspyHeading1">About</a>
