--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <div class="card col-4 h-50" style="width: 18rem;">
                         <img src="assets/Mathematics-bro.svg" class="card-img-top" alt="...">
                         <div class="card-body">
+                        <h3>Programming</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
@@ -78,6 +79,7 @@
                     <div class="card col-4 h-50" style="width: 18rem;">
                         <img src="assets/Data extraction-pana.svg" class="card-img-top" alt="...">
                         <div class="card-body ">
+                        <h3>Data-Science</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
