--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row container-fluid">
             <div class="col-lg-6 h-25">
                 <h1>Divyanshu Mishra</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur soluta placeat quis, totam reprehenderit consequatur qui delectus architecto impedit? Quo?</p>
+                <p>I am a Software-Engeniring trying to learn everything and seting my position in this Competative Word</p>
                 <button  type="button" class="btn btn-dark btn-lg"><img src="assets/icons8-download-file-100.png"class="img img1"> Resume</button>
                 <button  type="button" class="btn btn-outline-dark btn-lg"><img src="assets/icons8-github-512.png" class="img img1"> GitHub</button>
             </div>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="card col-4 h-50" style="width: 18rem;">
                         <img src="assets/Data extraction-pana.svg" class="card-img-top" alt="...">
-                        <div class="card-body ">
+                        <div class="card-body">
                         <h3>Data-Science</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
