add callculator proj

--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
                             </a>
                             
                             <ul class="dropdown-menu bg-dark">
-                            <li><a class="dropdown-item link-light" href="#scrollspyHeading3">Action</a></li>
+                            <li><a class="dropdown-item link-light" href="cal.html">Calculator</a></li>
                             <li><a class="dropdown-item link-light" href="#scrollspyHeading4">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider bg-light">
