--- a/cal.html
+++ b/cal.html
@@ -39,7 +39,7 @@
                 <div>
                     <input type="button" value="00" onclick="display.value+='00'">
                     <input type="button" value="0" onclick="display.value+='0'">
-                    <input type="button" value="=" onclick="display.value+=eval(display.value)" class="equal" class="ope">
+                    <input type="button" value="=" onclick="display.value=eval(display.value)" class="equal" class="ope">
                 </div>
             </form>
         </div>
