--- a/cal.html
+++ b/cal.html
@@ -22,7 +22,7 @@
                     <input type="button" value="7" onclick="display.value+='7'">
                     <input type="button" value="8" onclick="display.value+='8'">
                     <input type="button" value="9" onclick="display.value+='9'">
-                    <input type="button" value="X" onclick="display.value+='X'" class="ope">
+                    <input type="button" value="X" onclick="display.value+='*'" class="ope">
                 </div>
                 <div>
                     <input type="button" value="4" onclick="display.value+='4'">
