--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="col-lg-6 h-25">
                 <h1>Divyanshu Mishra</h1>
                 <p>I am a Software-Engeniring trying to learn everything and seting my position in this Competative Word</p>
-                <button  type="button" class="btn btn-dark btn-lg"><img src="assets/icons8-download-file-100.png"class="img img1"> Resume</button>
-                <button  type="button" class="btn btn-outline-dark btn-lg"><img src="assets/icons8-github-512.png" class="img img1"> GitHub</button>
+                <a href="https://drive.google.com/file/d/1qjXl4XsXwxkn0oLasKfG3D51oCHEDzkD/view?usp=drive_link"><button  type="button" class="btn btn-dark btn-lg"><img src="assets/icons8-download-file-100.png"class="img img1"> Resume</button></a>
+                <a href="https://github.com/iAmTheBest4222"><button  type="button" class="btn btn-outline-dark btn-lg"><img src="assets/icons8-github-512.png" class="img img1"> GitHub</button></a>
             </div>
             <div class="col-lg-6 h-50 container">
                 <img src="assets/Ecosystem-bro.svg" class="photo h-25" alt="photo">
