--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li>
                             <hr class="dropdown-divider bg-light">
                         </li>
-                        <li><a class="dropdown-item link-light" href="#scrollspyHeading5">Something else here</a></li>
+                        <li><a class="dropdown-item link-light" href="https://github.com/iAmTheBest4222/wine_quality_predicton">Wine Quality Prediction</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
